feat(86): modify crawling with cursor based functioning